# asio-analyze

./: .gitignore  README.md  pyproject.toml  setup.py
ExampleDocs/: main.tex
ExampleDocs/sections/: 01_Introduction.tex  02_LPT.tex  03_Background.tex  04_Notes.tex  05_Appendix.tex  references.bib  revision_log.tex  signature_page.tex  titlepage.tex
asio_analyze/: __init__.py  cli.py  commands.py  fe55.py  flipsample.ipynb  get_data.py  gui.py  latex_report.py  ltv.py  ltv_real.py  noise_analysis.py  parse.py  rpt.py  segments.py
scripts/: analysis_pipeline.ipynb  csv_generator.py
scripts/encoding/: 02_20250918_background_lights_2.csv  03_20250919_VL_SXR1_nd_3_1.csv  04_20250919_Fe55_SXR3_1.csv  20250918.0x0002  20250919.0x0003  20250919.0x0004  20260604_162619_asio_start_test.rpt  20260604_162623_asio_end_test.rpt  flipsample.ipynb
scripts/encoding/analysis/: run_note.txt
scripts/encoding/analysis/csv/: 20250918_full_detrended_stats.csv  20250918_full_raw_stats.csv  20250918_stats.csv  20250919_full_detrended_stats.csv  20250919_full_raw_stats.csv  20250919_voltages.csv  20260604_full_detrended_stats.csv  20260604_full_raw_stats.csv  20260604_stats.csv
scripts/encoding/analysis/tex/: PDF_20250918.tex  PDF_20260604.tex  PDF_full_20250918.tex  PDF_full_20250919.tex  PDF_full_20260604.tex
scripts/ltv_experiment/: 04_20250919_Fe55_SXR3_1_Science.csv  06_20250918_background_nolights_3.csv  20260602.0x02B4  LTV 3.py  LTV.py  LTV_Overhauled.py  parser.ipynb  transpose_nolights.py
